# scam-ico

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  truffle-config.js
contracts/: FakeWeth.sol  MagicWeth.sol  Scam.sol  ScamIco.sol
migrations/: 2_deploy_contracts.js
src/: context.rs  contract.rs  gui.rs  main.rs  truffle.rs  wallet.rs
