[package]
name = "scam-ico"
version = "0.1.0"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2018"

[dependencies]
ethabi = "9.0.1"
rlp = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
termion = "1.5"
tiny-keccak = "1.5"
tui = "0.6"

ethsign = { git = "https://github.com/tomusdrw/ethsign" }
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
