[package]
name = "scam-ico"
version = "0.1.0"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2018"

[dependencies]
cursive = "0.13"
ethabi = "9.0"
rlp = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
tiny-keccak = "1.5"

bip39 = { git = "https://github.com/infincia/bip39-rs" }
ethsign = { git = "https://github.com/tomusdrw/ethsign" }
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
